{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 125,
  "lineage": "e455c61c-7cc6-4a88-612e-2cb07ce8480d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "fonsah-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041d255dc1e133065",
            "domain": "vpc",
            "id": "eipalloc-041d255dc1e133065",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-12-0-245.us-east-2.compute.amazonaws.com",
            "public_ip": "3.12.0.245",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fonsah-eip"
            },
            "tags_all": {
              "Name": "fonsah-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fonsah-priv-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:869227219142:instance/i-0801448ed24d4179f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0801448ed24d4179f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "fonsah_chamberlain_ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-087bbe42e8dd01bcc",
            "private_dns": "ip-150-0-200-120.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "150.0.200.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-077af496b386d550e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3fd4cf5c7a37d8d",
            "tags": {
              "Name": "fonsah-priv-server"
            },
            "tags_all": {
              "Name": "fonsah-priv-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09622b05f6c5bcfe7"
            ]
          },
          "dependencies": [
            "aws_security_group.fonsah-sg",
            "aws_subnet.fonsah-priv-sn",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fonsah-pub-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8b44ec9a8f90422",
            "arn": "arn:aws:ec2:us-east-2:869227219142:instance/i-0279c5dbdeff45804",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0279c5dbdeff45804",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "fonsah_chamberlain_ohio",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0987cd72f300fca60",
            "private_dns": "ip-150-0-100-164.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "150.0.100.164",
            "public_ip": "18.226.133.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b99d72a747b580a6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cedb371899136623",
            "tags": {
              "Name": "fonsah-pub-server"
            },
            "tags_all": {
              "Name": "fonsah-pub-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09622b05f6c5bcfe7"
            ]
          },
          "dependencies": [
            "aws_security_group.fonsah-sg",
            "aws_subnet.fonsah-pub-sn",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fonsah-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:internet-gateway/igw-073abc66b968d7c4a",
            "id": "igw-073abc66b968d7c4a",
            "owner_id": "869227219142",
            "tags": {
              "Name": "fonsah-IG"
            },
            "tags_all": {
              "Name": "fonsah-IG"
            },
            "vpc_id": "vpc-0a00c651bd549de78"
          },
          "dependencies": [
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "fonsah-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041d255dc1e133065",
            "association_id": "eipassoc-0f9cc34bab90d325d",
            "connectivity_type": "public",
            "id": "nat-0c7fc6b76b762a808",
            "network_interface_id": "eni-06888eabec08c588b",
            "private_ip": "150.0.100.136",
            "public_ip": "3.12.0.245",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cedb371899136623",
            "tags": {
              "Name": "fonsah-NAT-GW"
            },
            "tags_all": {
              "Name": "fonsah-NAT-GW"
            }
          },
          "dependencies": [
            "aws_eip.fonsah-eip",
            "aws_internet_gateway.fonsah-ig",
            "aws_subnet.fonsah-pub-sn",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fonsah-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:route-table/rtb-0ced9135330f32413",
            "id": "rtb-0ced9135330f32413",
            "owner_id": "869227219142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c7fc6b76b762a808",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fonsah-priv-RT"
            },
            "tags_all": {
              "Name": "fonsah-priv-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00c651bd549de78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.fonsah-eip",
            "aws_internet_gateway.fonsah-ig",
            "aws_nat_gateway.fonsah-nat-gw",
            "aws_subnet.fonsah-pub-sn",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fonsah-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:route-table/rtb-09194af8c7ecd3646",
            "id": "rtb-09194af8c7ecd3646",
            "owner_id": "869227219142",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073abc66b968d7c4a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fonsah-pub-RT"
            },
            "tags_all": {
              "Name": "fonsah-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00c651bd549de78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.fonsah-ig",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fonsah-priv-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09eb687c1dda3d816",
            "route_table_id": "rtb-0ced9135330f32413",
            "subnet_id": "subnet-0d3fd4cf5c7a37d8d"
          },
          "dependencies": [
            "aws_eip.fonsah-eip",
            "aws_internet_gateway.fonsah-ig",
            "aws_nat_gateway.fonsah-nat-gw",
            "aws_route_table.fonsah-priv-rt",
            "aws_subnet.fonsah-priv-sn",
            "aws_subnet.fonsah-pub-sn",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fonsah-pub-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076707807f08045e4",
            "route_table_id": "rtb-09194af8c7ecd3646",
            "subnet_id": "subnet-0cedb371899136623"
          },
          "dependencies": [
            "aws_internet_gateway.fonsah-ig",
            "aws_route_table.fonsah-pub-rt",
            "aws_subnet.fonsah-pub-sn",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fonsah-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:security-group/sg-09622b05f6c5bcfe7",
            "description": "fonsah security group to allow all traffic",
            "egress": [],
            "id": "sg-09622b05f6c5bcfe7",
            "ingress": [],
            "name": "fonsah-all-traffic",
            "name_prefix": "",
            "owner_id": "869227219142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fonsah-sg"
            },
            "tags_all": {
              "Name": "fonsah-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00c651bd549de78"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fonsah-sg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "150.0.0.0/16"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1539438092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09622b05f6c5bcfe7",
            "security_group_rule_id": "sgr-038013996db0268cf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.fonsah-sg",
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fonsah-priv-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:subnet/subnet-0d3fd4cf5c7a37d8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "150.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3fd4cf5c7a37d8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "869227219142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fonsah-priv-SN"
            },
            "tags_all": {
              "Name": "fonsah-priv-SN"
            },
            "vpc_id": "vpc-0a00c651bd549de78"
          },
          "dependencies": [
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fonsah-pub-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:subnet/subnet-0cedb371899136623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "150.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cedb371899136623",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "869227219142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fonsah-pub-SN"
            },
            "tags_all": {
              "Name": "fonsah-pub-SN"
            },
            "vpc_id": "vpc-0a00c651bd549de78"
          },
          "dependencies": [
            "aws_vpc.fonsah-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fonsah-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:869227219142:vpc/vpc-0a00c651bd549de78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "150.0.0.0/16",
            "default_network_acl_id": "acl-0b66a30474e6b2208",
            "default_route_table_id": "rtb-0767f32a6bdf82127",
            "default_security_group_id": "sg-00c8847bf3d29c84f",
            "dhcp_options_id": "dopt-00e3c5044f99b1c27",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a00c651bd549de78",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0767f32a6bdf82127",
            "owner_id": "869227219142",
            "tags": {
              "Name": "fonsah-vpc"
            },
            "tags_all": {
              "Name": "fonsah-vpc"
            }
          }
        }
      ]
    }
  ]
}